objects/OF_AreaGeograficaCustom__c.object
<CustomObject>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>Comune</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Istat__c</fullName>
        <label>ISTAT</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Regione__c</fullName>
        <label>Regione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Area geografica</label>
    <nameField>
        <displayFormat>ISTAT-{000000}</displayFormat>
        <label>ISTAT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area geografica</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>